// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option should work and respect the "output.filename" as a function: errors 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" as a function: warnings 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" default value option: errors 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" default value option: module 1`] = `
"export default function() {
  return new Worker(__webpack_public_path__ + \\"main.worker.js\\");
};
"
`;

exports[`"filename" option should work and respect the "output.filename" default value option: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work and respect the "output.filename" default value option: warnings 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" option value: errors 1`] = `Array []`;

exports[`"filename" option should work and respect the "output.filename" option value: module 1`] = `
"export default function() {
  return new Worker(__webpack_public_path__ + \\"main.bundle.worker.js\\");
};
"
`;

exports[`"filename" option should work and respect the "output.filename" option value: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work and respect the "output.filename" option value: warnings 1`] = `Array []`;

exports[`"filename" option should work: errors 1`] = `Array []`;

exports[`"filename" option should work: module 1`] = `
"export default function() {
  return new Worker(__webpack_public_path__ + \\"my-custom-name.js\\");
};
"
`;

exports[`"filename" option should work: result 1`] = `"{\\"postMessage\\":true,\\"onmessage\\":true}"`;

exports[`"filename" option should work: warnings 1`] = `Array []`;
